@@ -100,14 +100,14 @@ class cFileCommunications : public cParsimCommunications
      * Receives packed data with given tag from given destination.
      * Normally returns true; false is returned if blocking was interrupted by the user.
      */
-    virtual bool receiveBlocking(cCommBuffer *buffer, int& receivedTag, int& sourceProcId);
+    virtual bool receiveBlocking(int filtTag, cCommBuffer *buffer, int& receivedTag, int& sourceProcId);
 
     /**
      * Receives packed data with given tag from given destination.
      * Call is non-blocking -- it returns true if something has been
      * received, false otherwise.
      */
-    virtual bool receiveNonblocking(cCommBuffer *buffer,  int& receivedTag, int& sourceProcId);
+    virtual bool receiveNonblocking(int filtTag, cCommBuffer *buffer,  int& receivedTag, int& sourceProcId);
 
     /**
      * Blocks until all partitions call the same method.
